--- a/kategoria1.html
+++ b/kategoria1.html
@@ -65,7 +65,7 @@
                 <figure class="c-figure">
                   <img
                     id="exo"
-                    src="img/I/exo.jpg"
+                    src="img/I/exo.JPG"
                     class="img-fluid"
                     alt="kot egzotyczny"
                   />
